test/Fail/Issue8144NoMutual.err
Issue8144NoMutual.agda:13.6-7: error: [NoSuchModule]
No module R in scope---but a record type of that name is in scope
whose record module is either not defined yet or hidden (note that
records defined in a 'mutual' block cannot be opened in the same
block)
when scope checking the declaration
  open R
